miniextendr-macros/tests/ui/derive_dataframe_lifetime_enum.stderr
warning: unexpected `cfg` condition value: `rayon`
  --> tests/ui/derive_dataframe_lifetime_enum.rs:17:10
   |
17 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^
   |
   = note: expected values for `feature` are: `default-coerce`, `default-r6`, `default-s7`, `default-strict`, `default-worker`, `doc-lint`, and `vctrs`
   = note: using a cfg inside a derive macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `DataFrameRow` crate for guidance on how handle this unexpected cfg
   = help: the derive macro `DataFrameRow` may come from an old version of the `miniextendr_macros` crate, try updating your dependency with `cargo update -p miniextendr_macros`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default
   = note: this warning originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Vec<Option<&str>>: IntoR` is not satisfied
  --> tests/ui/derive_dataframe_lifetime_enum.rs:17:10
   |
17 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^ the trait `IntoR` is not implemented for `Vec<Option<&str>>`
   |
   = help: the following other types implement trait `IntoR`:
             Vec<&str>
             Vec<BTreeMap<std::string::String, V>>
             Vec<BTreeSet<T>>
             Vec<BTreeSet<std::string::String>>
             Vec<Box<[T]>>
             Vec<Box<[std::string::String]>>
             Vec<Cow<'_, str>>
             Vec<HashMap<std::string::String, V>>
           and $N others
   = note: this error originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)
